Fixed Issues with Reactiveness
Fixed an issue where the divs would overlap
Set the Image Size to be a percentage of its parent div

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 
 body{
 	margin: 0px;
+	background-color: var(--DaiPink);
 }
 
 .header{
@@ -38,19 +39,18 @@ body{
 }
 
 .maininfo{
-	width: 85%;
-	height: 80%;
+
 	background: rgba(243, 229, 220,.75);
 	border-radius:30px;
-
-    position: absolute;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+	width: 90%;
+	height: 85%;
     
-    margin: auto;
+    margin: 10px auto;
 
 	text-align: center;
 
+}
+
+#profileimg{
+	height:75%;
 }
